Fix for the weapon cutoff issues.

--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,9 @@
 	margin: 0;
 	background:transparent;
     position:fixed;
-    z-index: -2;
-    width: 512px;
-    height: 512px;
+    z-index: 0;
+    width: 256px;
+    height: 256spx;
 }
 
 #generate {
